--- a/index.html
+++ b/index.html
@@ -7,15 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="shortcut icon" href="favicon.png">
-    <title>Heli 1</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <title>Heli 1 Corp.</title>
     <style type="text/css">
-      body{
-      }
+        html{
+            font-size: 62.5%;
+        }
+
+        body{
+            font-size: 1.6rem;
+            font-family: 'Montserrat', sans-serif;
+            background-color: #27377F;
+            color: #C3CAEA;
+            padding: 80px;
+            line-height: 1.5;
+        }
+
+        h1{
+            font-size: 2.0rem;
+            margin: 0;
+        }
+
+        p{
+            margin: 0;
+        }
+
+        a{
+            color: #C3CAEA;
+        }
     </style>
 </head>
 
 <body>
-    
-</body>
+    <img src="heli-1-logo-closecut.svg" alt="Heli-1 logo" style="display: inline-block;margin-bottom: 15px;">
+    <h1>Heli-1 Corp.</h1>
+    <p>
+        Phone: 406-549-4119<br>
+        Fax: 775-825-1989<br>
+        Email: <a href="mailto:andyw@heli-1.com">andyw@heli-1.com</a>
+    </p>
 
+</body>
 </html>
