Add media query

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         a{
             color: #C3CAEA;
         }
+        
+        @media (max-width: 750px) {
+            body{
+                padding: 30px;
+            }
+        }
     </style>
 </head>
 
